--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "박현상(ParkHyunSang)"
 description              : "프론트엔드 개발자를 꿈꾸는 고등학생"
-url                      : "hyunsang.github.io"
+url                      : "hyunsang0625.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
