--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Park's Development Diary"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "박현상(ParkHyunSang)"
-description              : "프론트엔드 개발자를 꿈꾸는 고등학생"
+description              : "프론트엔드 개발자를 꿈꾸는 고등학생\n 영화 시나리오 공부하는 "
 url                      : "hyunsang0625.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
