--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ author:
       url: "http://parkhyunsang.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "https://twitter.com/JoaoUbCcDxWtNaK"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       url: "https://www.facebook.com/profile.php?id=100034448592868"
