--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   name             : "박현상(ParkHyunSang)"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "💻프론트엔드 개발자를 꿈꾸는 고등학생\n 🎞영화 시나리오 공부하는 중"
-  location         : "Mokpo in South Korea"
+  location         : "Mokpo,South Korea"
   email            :
   links:
     - label: "Email"
