--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "HyunSang Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "현재 NetChoice에서 풀스택 개발을 도전 있습니다 \n Front End, Java, Android에 관심이 있습니다."
+  bio              : "현재 NetChoice에서 풀스택 개발을 도전 있습니다.  Front End, Java, Android에 관심이 있습니다."
   location         : "Mokpo, South Korea"
   email            : "hyun.sang@parkhyunsang.com"
   links:
